# duckui

./: .gitignore  Cargo.toml  PACKAGING.md  README.md
.github/workflows/: release.yml
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1  package.sh
src/: loading.html  main.rs  runtime.sql  setup.sql
