[package]
name = "duckui"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
duckdb = { version = "1.4.3", features = ["bundled"] }
tao = "0.34"
wry = "0.54"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
